[gd_scene load_steps=13 format=3 uid="uid://bfk8uscbu36eu"]

[ext_resource type="Script" uid="uid://bb8ohlvcrn0c4" path="res://ui/combat/combat_unit_display/combat_unit_display.gd" id="1_sxmuu"]
[ext_resource type="Texture2D" uid="uid://t463djfofapv" path="res://resources/sprites/units/archer.tres" id="2_a14u6"]
[ext_resource type="Shader" uid="uid://byydlos1fnmbu" path="res://resources/shaders/StrokeShader.gdshader" id="2_gmc6e"]
[ext_resource type="Texture2D" uid="uid://dlwke1j3ebs74" path="res://resources/sprites/icons/effective_indicator_icon.png" id="4_v0tcl"]
[ext_resource type="Texture2D" uid="uid://bvq4waceawoy5" path="res://resources/sprites/icons/weapon_icons/lance_icon.png" id="5_uqo4k"]
[ext_resource type="Script" uid="uid://s6od5fcbiqvf" path="res://ui/healthbar.gd" id="6_13a20"]
[ext_resource type="Texture2D" uid="uid://xb1okf8u8p5q" path="res://resources/sprites/icons/unit_action_icons/inventory_icon.png" id="7_u1d3e"]
[ext_resource type="Texture2D" uid="uid://rdgquuhqygmo" path="res://resources/sprites/icons/boss_icon.png" id="7_uv63t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p1h6c"]
resource_local_to_scene = true
shader = ExtResource("2_gmc6e")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0
shader_parameter/color_factor = 1.0
shader_parameter/modulate_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3o7by"]
bg_color = Color(0.201527, 0.201527, 0.201527, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tesjc"]
bg_color = Color(4.52429e-06, 0.700928, 0.572457, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.776471, 0.882353, 0)

[sub_resource type="Theme" id="Theme_h8nj1"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_3o7by")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_tesjc")

[node name="combat_unit_display" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxmuu")

[node name="UnitSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_p1h6c")
texture = ExtResource("2_a14u6")

[node name="WarningIndicator" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = -15.0
offset_right = 8.0
offset_bottom = -8.0
texture = ExtResource("4_v0tcl")

[node name="weapon_icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(-11, -10)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_uqo4k")

[node name="boss_indicator" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("7_uv63t")
stretch_mode = 3

[node name="drop_indicator" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -15.0
offset_right = 1.0
offset_bottom = 16.0
texture = ExtResource("7_u1d3e")
stretch_mode = 3

[node name="Healthbar" type="ProgressBar" parent="."]
visible = false
layout_mode = 0
offset_left = -16.0
offset_top = 12.0
offset_right = 16.0
offset_bottom = 16.0
theme = SubResource("Theme_h8nj1")
step = 1.0
value = 55.0
show_percentage = false
script = ExtResource("6_13a20")
